--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,8 @@
     <head>
         <title>L. Robert Gonzalez</title>
         <meta charest="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
         <link rel="stylesheet"  type="text/css" href="assets/css/style3.css">
     </head>
     <body>
