--- a/index.html
+++ b/index.html
@@ -1,38 +1,47 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>L. Robert Gonzalez</title>
-        <meta charest="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet"  type="text/css" href="assets/css/style.css">
-    </head>
-    <body>
-        <div class="navbar">
-        <header>
-            <h1>L. Robert Gonzalez</h1>
-        </header>
-                <div class="links">
-                <ul>
-                    <li><a href="index.html">About|</a></li>
-                    <li><a href="portfolio.html">Portfolio|</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                </div>
-        </div>
-        <hr>
-        <section class="bio">
-        <h2> About Me </h2>
-        <hr>
-    <div class="content-about">
-       <p><img src="assets/images/Me2.png" alt="L.Robert Gonzalez, III"> Luis Roberto Gonzalez, III was born in El Paso, Texas in the month of October. Growing up in a border town taught Robert about humility and instilled his grit. In 2010 Robert relocated from El Paso, Texas to Albuquerque, New Mexico. This is where Robert learned how to succeed on his own without a safety net. New Mexico was a great adventure, but the weather was just too cold. In being a child of the desert, Robert missed the sun's warm rays! 
-        In 2013 he relocated to the Valley of the Sun known as Phoenix, Arizona; which is now his home! Since he arrived in 2013, Robert has worked support for the Real Estate industry and dealt with troubleshooting every software that is utilized for their day-to-day operations. In working support, he found himself diving into the Marketing aspect of the industry. This is what lead him down the path of becoming a developer. Robert found himself wanting to create, advise, and support companines that may utilize his years of experience. 
-        In the years that he has worked in this industry, Robert has gained knowledge and respect in the indusrty through hard work. He is ready to apply the same dedication to all potential clients and organizations through relationship building.</p>
-       </section>
+<!doctype html>
+<html lang="en-us">
+
+<head>
+  <meta charset="UTF-8">
+  <title>About | L. Robert Gonzalez, III</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">LRG3</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
     </div>
-    </body>
-    <footer>
-        <small>Copyright &#169;</small>
-        <br>
-    </footer>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>About Me</h1>
+
+      <img src="assets/images/Me2.png" class="auth-image" alt="L. Robert Gonzalez">
+
+      <p>Luis Roberto Gonzalez, III was born in El Paso, Texas in the month of October. Growing up in a border town taught Robert about humility and instilled his grit. In 2010 Robert relocated from El Paso, Texas to Albuquerque, New Mexico. This is where Robert learned how to succeed on his own without a safety net. New Mexico was a great adventure, but the weather was just too cold. </p> 
+      <p>In being a child of the desert, Robert missed the sun's warm rays! In 2013 he relocated to the Valley of the Sun known as Phoenix, Arizona; which is now his home! Since he arrived in 2013, Robert has worked support for the Real Estate industry and dealt with troubleshooting every software that is utilized for their day-to-day operations. In working support, he found himself diving into the Marketing aspect of the industry. </p> 
+      <p>This is what lead him down the path of becoming a developer. Robert found himself wanting to create, advise, and support companines that may utilize his years of experience. In the years that he has worked in this industry, Robert has gained knowledge and respect in the indusrty through hard work. He is ready to apply the same dedication to all potential clients and organizations through relationship building.</p>
+     
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy; 
+    </div>
+  </footer>
+</body>
+
 </html>
