--- a/portfolio.html
+++ b/portfolio.html
@@ -1,55 +1,66 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>L. Robert Gonzalez</title>
-        <meta charest="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet"  type="text/css" href="assets/css/style3.css">
-    </head>
-    <body>
-        <div class="navbar">
-        <header>
-            <h1>L. Robert Gonzalez</h1>
-        </header>
-                <div class="links">
-                <ul>
-                    <li><a href="index.html">About|</a></li>
-                    <li><a href="portfolio.html">Portfolio|</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-                </div>
-        </div>
-        <hr>
-        <section>
-        <h2> Portfolio </h2>
-        <hr>
-            <div class="images">
-                <div class="portfolio">
-                <img src="assets/images/Beach.jpg" alt="Beach" width="200px" height="200px">
-                <div class="text_overlay">Beach</div>
-            </div>
-                <div class="portfolio">
-                <img src="assets/images/Travel.jpg" alt="Travel" width="200px" height="200px">
-                <div class="text_overlay">Travel</div>
-            </div>
-                <div class="portfolio">
-                <img src="assets/images/Cooking.jpg" alt="Cooking" width="200px" height="200px">
-                <div class="text_overlay">Cooking</div>
-            </div>
-                <div class="portfolio">
-                <img src="assets/images/Dogs.jpg" alt="Dog" width="200px" height="200px">
-                <div class="text_overlay">Dog</div>
-            </div>
-                <div class="portfolio">
-                <img src="assets/images/Advanced Technology.jpg" alt="Advanced Technology" width="200px" height="200px">
-                <div class="text_overlay">Advanced Technology</div>
-            </div>
-            </div>
-        </section>
-    </body>
-        <footer>
-                <small>Copyright &#169;</small>
-            <br>
-        </footer>
+<!doctype html>
+<html lang="en-us">
+
+<head>
+  <meta charset="UTF-8">
+  <title>Portfolio | L. Robert Gonzalez, III</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
+
+<body>
+
+  <header id="masthead">
+    <div class="container">
+      <a href="index.html" id="logo">LRG3</a>
+      <nav>
+        <a href="index.html">About</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="contact.html">Contact</a>
+      </nav>
+    </div>
+  </header>
+
+  <div id="main-container" class="container">
+    <section class="main-section">
+      <h1>Portfolio</h1>
+
+      <div class="work">
+        <img src="assets/images/Beach.jpg" alt="Beach">
+
+        <h3>Beach</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/Travel.jpg" alt="Travel">
+
+        <h3>Travel</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/Cooking.jpg" alt="Cooking">
+
+        <h3>Cooking</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/Dogs.jpg" alt="Dogs">
+
+        <h3>Dogs</h3>
+      </div>
+      <div class="work">
+        <img src="assets/images/Advanced Technology.jpg" alt="Advanced Technology">
+
+        <h3>Advanced Technology</h3>
+      </div>
+
+    </section>
+
+  </div>
+
+  <footer>
+    <div class="container">
+      Copyright &copy;
+    </div>
+  </footer>
+</body>
+
 </html>
